# inflation-viz

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy-frontend.yml
backend/: Makefile  README.md  ecr.tf  ecs.tf  main.tf  outputs.tf  s3.tf  vars.tf
backend/bootstrap/: main.tf
backend/infra/: Makefile  backend.tf  cert.tf  cloudfront.tf  dns.tf  ecr.tf  ecs.tf  main.tf  outputs.tf  s3.tf  vars.tf
data-pipeline/: README.md  main.py  pyproject.toml
data-pipeline/cpih_json_exporter/: aws_uploader.py  fetcher.py  parser.py  s3_uploader.py  transformer.py
data_pipeline/: README.md  main.py  pyproject.toml  transformer.py
data_pipeline/cpih_json_exporter/: parser.py
data_pipeline/cpihcsv2json/: fetcher.py  parser.py  transformer.py
docs/: index.js  styles.css
docs/data/: cpih.json
docs/frontend/: index.html
docs/frontend/js/: selectors.js
frontend/: index.html  index.js  styles.css
frontend/js/: chart.js  info_tooltip.js  pack.js  selectors.js
