[project]
name = "cpih_json_exporter"
version = "0.1.0"
description = "Fetches ONS MM23 dataset csv, then parses it and generates a hierarchical JSON with CPIH indices and weights"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "boto3>=1.38.23",
]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

select = [
  "E",      # pycodestyle (formatting)
  "F",      # pyflakes (errors)
  "B",      # bugbear (likely bugs)
  "I",      # isort (imports)
  "UP",     # pyupgrade (modern syntax)
  "SIM",    # simplify (useless `if`, double negations, etc.)
  "C4",     # comprehensions
  "TID",    # tidy imports
]

# Exclude test/data/venv dirs
exclude = [
  ".venv",
  "__pycache__",
]